      for a test.
  * debian/rules:
    + [JW, NT] Post process HTML docmentation to set the charset to UTF-8,
      which fixes mojibake in the Debian Policy Manual links.  Thanks to
      Paul Hardy for finding a solution to the problem.
      (Closes: #802721)
    + [NT] Override dh_autoreconf tools as they are not used (but need to
      scan over all files in the source package).

  * lib/Lintian/Util.pm:
    + [NT] Fix uninitialized warning if a fork call fails.

  * profiles/debian/main.profile:
    + [NT] Enable appstream-metadata + udev check by default.
      (Closes: #841670)

  * t/tests/spelling-general/debian/debian/copyright:
    + [CL] Add regression test for #844166.

 -- Chris Lamb <lamby@debian.org>  Sun, 18 Jun 2017 19:03:46 +0800

lintian (2.5.51) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - debian-control-has-dbgsym-package
      - debian-control-has-obsolete-dbg-package
      - debian-rules-parses-dpkg-parsechangelog
      - desktop-entry-lacks-icon-entry
      - distribution-and-changes-mismatch
      - distribution-and-experimental-mismatch
      - gir-in-arch-all-package
      - gir-missing-typelib-dependency
      - gir-section-not-libdevel
      - multiarch-foreign-shared-library
      - r-data-without-readme-source
      - readme-source-is-dh_make-template
      - repeated-trigger-name
      - systemd-service-file-refers-to-obsolete-bindto
      - testsuite-autopkgtest-missing
      - typelib-in-arch-all-package
      - typelib-missing-gir-depends
      - typelib-not-in-multiarch-directory
      - typelib-package-name-does-not-match
      - typelib-section-not-introspection
      - unknown-trigger
      - unreleased-changes
      - uses-implicit-await-trigger
    + Removed:
      - ancient-autotools-helper-file
      - init.d-script-missing-dependency-on-remote_fs
      - maintainer-script-should-not-use-ancient-dpkg-epoch-check
      - maintainer-script-should-not-use-ancient-dpkg-multi-conrep-check